some fixes; new routes to put/delete; new tests for new routes; dockerfile changes