@@ -1,8 +1,10 @@
-FROM gradle:6.2
-LABEL author="knautiluz"
-USER root
+FROM gradle:6.2 AS build
+COPY --chown=gradle:gradle . /usr/spring-boot/apps
 WORKDIR /usr/spring-boot/apps
-COPY . /usr/spring-boot/apps
-RUN ./gradlew build --no-daemon
-COPY build/libs/*.jar app/spring-boot-application.jar
-ENTRYPOINT ["java", "-jar", "app/spring-boot-application.jar"]
+RUN gradle build --no-daemon
+
+FROM openjdk:8-jre-slim
+EXPOSE 8080
+RUN mkdir /app
+COPY --from=build /usr/spring-boot/apps/build/libs/*.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
